<resources>
    <string name="app_name">Demo</string>
    <string name="current_time">Current time: %1$s</string>
    <string name="btn_normal">Normal Button</string>
    <string name="btn_bordered">Bordered Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rounded_button">Rounded Button</string>
    <string name="disabled_button">Disabled Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="text_button">Text Button</string>
    <string name="image_button">Image Button</string>
    <string name="info">info</string>
    <string name="gradient_button">Gradient Button</string>
    <string name="short_toast">Short Toast</string>
    <string name="long_toast">Long toast</string>
    <string name="success_toast">Success Toast</string>
    <string name="error_toast">Error Toast</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="switch_button">Switch</string>
    <string name="enabled_switch">Enabled</string>
    <string name="disabled_switch">Disabled</string>
    <string name="select_known_languages">Select known languages:</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="gujarati">Gujarati</string>
    <string name="spanish">Spanish</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_your_house">Select your house:</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="ravenclaw">Ravenclaw</string>
    <string name="hufflepuff">Hufflepuff</string>
    <string name="slytherin">Slytherin</string>
    <string name="select_your_gender">Select your gender:</string>
    <string name="add">Add</string>
    <string name="email_hint">Email</string>
    <string name="password_helper_text">min 6 characters, at least one symbol and digit</string>
    <string name="description">Description</string>
    <string name="normal_text_input_edit_text">Normal Text Input Edit Text</string>
    <string name="floating_hint">Floating hint</string>
    <string name="outlined_text_field">Outlined text field</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="clear">Clear</string>
    <string name="short_snack_bar">Short snack bar</string>
    <string name="long_snack_bar">Long snack bar</string>
    <string name="multi_line_snack_bar">Multi Line\nsnack bar</string>
    <string name="action_snack_bar">Action snack bar</string>
    <string name="anchor_snack_bar">Anchor snack bar</string>
    <string name="swipeable_snack_bar">Swipeable snack bar</string>
    <string name="welcome_to_home_fragment">Welcome to Home Fragment</string>
    <string name="welcome_to_chat_fragment">Welcome to Chat Fragment</string>
    <string name="welcome_to_calls_fragment">Welcome to Chat Fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="calls">Calls</string>
    <string name="compose_email">Compose Email</string>
    <string name="tb_normal">Tool Bar Normal</string>
    <string name="profile">Profile</string>
    <string name="tb_navigation">Tool Bar with navigation</string>
    <string name="tb_items">Tool Bar with items</string>
    <string name="search">Search</string>
    <string name="tb_search">Search Bar</string>
    <string name="tb_logo">Tool Bar Logo</string>
    <string name="tb_left_action">Left Action</string>
    <string name="insets_description">Insects are pancrustacean hexapod invertebrates of the class Insecta. They are the largest group within the arthropod phylum. Insects have a chitinous exoskeleton, a three-part body, three pairs of jointed legs, compound eyes and one pair of antennae. Insects is an international, peer-reviewed, open access journal of entomology published monthly online by MDPI.</string>
    <string name="travel_description">Travel is the movement of people between distant geographical locations.</string>
    <string name="running_up_that_hill_lyrics">It doesn\'t hurt me (yeah, yeah, yo)\nDo you wanna feel how it feels? (Yeah, yeah, yo)\nDo you wanna know, know that it doesn\'t hurt me? (Yeah, yeah, yo)\nDo you wanna hear about the deal that I\'m making? (Yeah, yeah, yo)\nYou\nIt\'s you and me\nAnd if I only could\nI\'d make a deal with God\nAnd I\'d get Him to swap our places\nBe runnin\' up that road\nBe runnin\' up that hill\nBe runnin\' up that building\nSay, if I only could, oh\nYou don\'t wanna hurt me (yeah, yeah, yo)\nBut see how deep the bullet lies (yeah, yeah, yo)\nUnaware I\'m tearin\' you asunder (yeah, yeah, yo)\nOh, there is thunder in our hearts (yeah, yeah, yo)\nIs there so much hate for the ones we love? (Yeah, yeah, yo)\nOh, tell me, we both matter, don\'t we? (Yeah, yeah, yo)\nYou\nIt\'s you and me\nIt\'s you and me\nWon\'t be unhappy\nAnd if I only could\nI\'d make a deal with God\nAnd I\'d get Him to swap our places\nBe runnin\' up that road\nBe runnin\' up that hill\nBe runnin\' up that building (yo)\nSay, if I only could, oh\nYou (yeah, yeah, yo)\nIt\'s you and me\nIt\'s you and me\nWon\'t be unhappy (yeah, yeah, yo)\nOh, come on, baby (yeah)\nOh, come on, darlin\' (yo)\nLet me steal this moment from you now\nOh, come on, angel\nCome on, come on, darlin\'\nLet\'s exchange the experience (yo), oh, ooh, ooh\nAnd if I only could\nI\'d make a deal with God\nAnd I\'d get Him to swap our places\nI\'d be runnin\' up that road\nBe runnin\' up that hill\nWith no problems\nSay, if I only could\nI\'d make a deal with God\nAnd I\'d get Him to swap our places\nI\'d be runnin\' up that road\nBe runnin\' up that hill\nWith no problems\nSay, if I only could\nI\'d make a deal with God\nAnd I\'d get Him to swap our places\nI\'d be runnin\' up that road\nBe runnin\' up that hill\nWith no problems\nSay, if I only could\nI\'d be runnin\' up that hill\nWith no problems</string>
    <string name="smile_emoji">☺️</string>
    <string name="sad_emoji">😔</string>
    <string name="angry_emoji">😡</string>
    <string name="heart_emoji">💖</string>
    <string name="dragon_emoji">🐉</string>
    <string name="fire_emoji">🔥</string>
    <string name="melting_face_emoji">🫠</string>
    <string name="moon_emoji">🌚</string>
    <string name="toggle_emoji">Toggle Emoji</string>
    <string name="after_barrier">After Barrier</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="format_24_hour">24 hour</string>
    <string name="time">%1$d:%2$d %3$s</string>
    <string name="slider_value">Slider value: %1$.2f</string>
    <string name="slider_range_value">Slider value: from %1$.2f to %2$.2f</string>
    <string name="continues_slider_normal">Continues slider normal</string>
    <string name="discrete_slider">Discrete slider</string>
    <string name="range_continues_slider">Range continues slider</string>
    <string name="range_discrete_slider">Range discrete slider</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="normal_drop_down">Normal drop-down</string>
    <string name="bordered_drop_down">Bordered drop-down</string>
    <string name="dialog_drop_down">Dialog drop-down</string>
    <string name="underlined_drop_down">Underlined drop-down</string>
    <string name="timezones">Timezones</string>
    <string name="exposed_drop_down">Exposed drop-down</string>
    <string name="custom_drop_down">Custom drop-down</string>
    <string name="disabled_drop_down">Disabled drop-down</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="color_span_text">This is Red and Green colored text.</string>
    <string name="underline_line_through_span_text">This is Underlined and LineThrough text.</string>
    <string name="link_span_text">This is my Portfolio</string>
    <string name="click_toast_text">You clicked: %1$s</string>
    <string name="feed">Feed</string>
    <string name="my_cards">My cards</string>
    <string name="operations">Operations</string>
    <string name="see_details">See Details</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="charges">Charges</string>
    <string name="income">Income</string>
    <string name="mastercard_logo">Mastercard logo</string>
    <string name="recent">Recent</string>
    <string name="history">History</string>
    <string name="select_theme">Select theme:</string>
    <string name="color_accent">Accents</string>
    <string name="color_red">Resting red</string>
    <string name="color_blue">Blissful blue</string>
    <string name="color_yellow">Yeeting yellow</string>
    <string name="color_green">Groovy green</string>
    <string name="color_purple">Pleasurable purple</string>
    <string name="material_you">Material You</string>
    <string name="color_violet">Versatile Violet</string>
    <string name="card_name">%1$s *%2$d</string>
    <string name="card_number">*** %1$d</string>
    <string name="market">Market</string>
    <string name="exchange">Exchange</string>
    <string name="wallet">Wallet</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="margin">Margin</string>
    <string name="limit">Limit</string>
    <string name="pool">Pool</string>
    <string name="euro_amount">€ %1$s</string>
    <string name="euro_amount_percentage">€ %1$s (%2$s%%)</string>
    <string name="demands">Demands</string>
    <string name="amount">Amount</string>
    <string name="average_price">Avg. price</string>
    <string name="your_price">Your price</string>
    <string name="_24_hr">24 HR</string>
    <string name="ma_ema_boll">MA / EMA / BOLL</string>
    <string name="vol_macd_kdj_rsi">VOL / MACD / KDJ / RSI</string>
    <string name="percentage_25">25%</string>
    <string name="percentage_50">50%</string>
    <string name="percentage_75">75%</string>
    <string name="percentage_100">100%</string>
    <string name="available">Available</string>
    <string name="total_euro">Total (€)</string>
    <string name="market_history">Market history</string>
    <string name="margin_data">Margin data</string>
    <string name="functional_data">Functional data</string>
    <string name="price">Price</string>
    <string name="you_exchange">You exchange</string>
    <string name="you_receive">You receive</string>
    <string name="transaction_cost">Transaction cost</string>
    <string name="rose_percentage">Rose %1$d%%</string>
    <string name="avax_percentage">Avax %1$d%%</string>
    <string name="link_percentage">Link %1$d%%</string>
    <string name="open_orders">Open orders</string>
    <string name="portfolio">Portfolio</string>
    <string name="currency">CURRENCY</string>
    <string name="date_action">Date/Action</string>
    <string name="finalized">Finalized</string>
    <string name="details">Details</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Buy</string>
    <string name="notification">Notificaiton</string>
    <string name="percentage">%1$d%%</string>
    <string name="wallet_value">Wallet value</string>
    <string name="ma_ema">MA / EMA</string>
    <string name="cd_home">Bottom navigation home</string>
    <string name="title_home">Home</string>
    <string name="explore">Explore</string>
    <string name="cd_notification">Bottom navigation notification</string>
    <string name="cd_explore">Bottom navigation explore</string>
    <string name="cd_profile">Bottom navigation profile</string>
</resources>