<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miCompose"
        android:icon="@drawable/ic_email"
        android:title="@string/compose_email"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/ic_male"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/miInfo"
        android:icon="@drawable/ic_info"
        android:showAsAction="ifRoom|withText"
        android:title="@string/info">
    </item>
    <item
        android:id="@+id/miChat"
        android:icon="@drawable/ic_chat"
        android:showAsAction="ifRoom|withText"
        android:title="@string/chat">
    </item>
</menu>