<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".uicomponents.CheckboxFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/select_known_languages"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cbEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:checked="true"
        android:buttonTint="?attr/colorPrimary"/>

    <CheckBox
        android:id="@+id/cbHindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/cbGujarati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gujarati" />

    <CheckBox
        android:id="@+id/cbSpanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        app:cornerRadius="24dp"/>
</LinearLayout>