<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".uicomponents.SnackBarFragment">

    <Button
        android:id="@+id/btnShortSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_snack_bar" />

    <Button
        android:id="@+id/btnLongSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/long_snack_bar"
        android:textColor="?attr/colorOnSecondary" />

    <Button
        android:id="@+id/btnMultiLineSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/multi_line_snack_bar" />

    <Button
        android:id="@+id/btnActionSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/action_snack_bar" />

    <Button
        android:id="@+id/btnAnchorSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/anchor_snack_bar" />

    <Button
        android:id="@+id/btnSwipeableSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/swipeable_snack_bar" />

</LinearLayout>