<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".uicomponents.ToastFragment">

    <Button
        android:id="@+id/btnShortToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_toast" />

    <Button
        android:id="@+id/btnLongToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_toast" />

    <Button
        android:id="@+id/btnSuccessToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_toast"
        android:backgroundTint="@android:color/holo_green_dark"/>

    <Button
        android:id="@+id/btnErrorToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_toast"
        android:backgroundTint="@android:color/holo_red_dark"/>
</LinearLayout>