<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    tools:context=".uicomponents.SpinnerFragment">

    <TextView
        android:id="@+id/tvSpinnerNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/spinnerNormal"
        android:text="@string/normal_drop_down" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSpinnerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerDialog"
        android:text="@string/dialog_drop_down" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/tvSpinnerUnderlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerUnderlined"
        android:text="@string/underlined_drop_down" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerUnderlined"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSpinnerBordered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerBordered"
        android:text="@string/bordered_drop_down" />

    <Spinner
        android:id="@+id/spinnerBordered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle" />


    <TextView
        android:id="@+id/tvExposedDropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerBordered"
        android:text="@string/exposed_drop_down" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timezones"
        app:startIconDrawable="@drawable/ic_timezone">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTimezone"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownHeight="@dimen/dp_200"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSpinnerCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerCustom"
        android:text="@string/custom_drop_down" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvSpinnerDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:labelFor="@id/spinnerCustom"
        android:text="@string/disabled_drop_down" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerDisabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>