<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".uicomponents.SpanFragment">

    <TextView
        android:id="@+id/tvColorSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_span_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvUnderlineLineThroughSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/underline_line_through_span_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/link_span_text"
        android:textSize="18sp" />

</LinearLayout>